; ModuleID = '/home/carl/AnghaBench/git/extr_sub-process.c_subprocess_stop.c'
source_filename = "/home/carl/AnghaBench/git/extr_sub-process.c_subprocess_stop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hashmap = type { i32 }
%struct.subprocess_entry = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i64 }

@SIGTERM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @subprocess_stop(%struct.hashmap* %0, %struct.subprocess_entry* %1) #0 {
  %3 = alloca %struct.hashmap*, align 8
  %4 = alloca %struct.subprocess_entry*, align 8
  store %struct.hashmap* %0, %struct.hashmap** %3, align 8
  store %struct.subprocess_entry* %1, %struct.subprocess_entry** %4, align 8
  %5 = load %struct.subprocess_entry*, %struct.subprocess_entry** %4, align 8
  %6 = icmp ne %struct.subprocess_entry* %5, null
  br i1 %6, label %8, label %7

7:                                                ; preds = %2
  br label %25

8:                                                ; preds = %2
  %9 = load %struct.subprocess_entry*, %struct.subprocess_entry** %4, align 8
  %10 = getelementptr inbounds %struct.subprocess_entry, %struct.subprocess_entry* %9, i32 0, i32 1
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 1
  store i64 0, i64* %11, align 8
  %12 = load %struct.subprocess_entry*, %struct.subprocess_entry** %4, align 8
  %13 = getelementptr inbounds %struct.subprocess_entry, %struct.subprocess_entry* %12, i32 0, i32 1
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 8
  %16 = load i32, i32* @SIGTERM, align 4
  %17 = call i32 @kill(i32 %15, i32 %16)
  %18 = load %struct.subprocess_entry*, %struct.subprocess_entry** %4, align 8
  %19 = getelementptr inbounds %struct.subprocess_entry, %struct.subprocess_entry* %18, i32 0, i32 1
  %20 = call i32 @finish_command(%struct.TYPE_2__* %19)
  %21 = load %struct.hashmap*, %struct.hashmap** %3, align 8
  %22 = load %struct.subprocess_entry*, %struct.subprocess_entry** %4, align 8
  %23 = getelementptr inbounds %struct.subprocess_entry, %struct.subprocess_entry* %22, i32 0, i32 0
  %24 = call i32 @hashmap_remove(%struct.hashmap* %21, i32* %23, i32* null)
  br label %25

25:                                               ; preds = %8, %7
  ret void
}

declare dso_local i32 @kill(i32, i32) #1

declare dso_local i32 @finish_command(%struct.TYPE_2__*) #1

declare dso_local i32 @hashmap_remove(%struct.hashmap*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
